; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_foreachOffset.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_foreachOffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i8*, i8*)* @foreachOffset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @foreachOffset(%struct.TYPE_5__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i8* @strdup(i8* %12)
  store i8* %13, i8** %7, align 8
  store i8* null, i8** %8, align 8
  br label %14

14:                                               ; preds = %102, %3
  %15 = load i8*, i8** %6, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %104

17:                                               ; preds = %14
  br label %18

18:                                               ; preds = %23, %17
  %19 = load i8*, i8** %6, align 8
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %21, 32
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i8*, i8** %6, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %6, align 8
  br label %18

26:                                               ; preds = %18
  %27 = load i8*, i8** %6, align 8
  %28 = load i8, i8* %27, align 1
  %29 = icmp ne i8 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %26
  br label %104

31:                                               ; preds = %26
  %32 = load i8*, i8** %6, align 8
  %33 = call i8* @strchr(i8* %32, i8 signext 10)
  store i8* %33, i8** %10, align 8
  %34 = load i8*, i8** %10, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %36, label %40

36:                                               ; preds = %31
  %37 = load i8*, i8** %10, align 8
  store i8 0, i8* %37, align 1
  %38 = load i8*, i8** %10, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 1
  store i8* %39, i8** %8, align 8
  br label %41

40:                                               ; preds = %31
  store i8* null, i8** %8, align 8
  br label %41

41:                                               ; preds = %40, %36
  %42 = load i8*, i8** %6, align 8
  %43 = call i8* @strchr(i8* %42, i8 signext 35)
  store i8* %43, i8** %10, align 8
  %44 = load i8*, i8** %10, align 8
  %45 = icmp ne i8* %44, null
  br i1 %45, label %46, label %48

46:                                               ; preds = %41
  %47 = load i8*, i8** %10, align 8
  store i8 0, i8* %47, align 1
  br label %48

48:                                               ; preds = %46, %41
  br label %49

49:                                               ; preds = %94, %48
  %50 = load i8*, i8** %6, align 8
  %51 = icmp ne i8* %50, null
  br i1 %51, label %52, label %57

52:                                               ; preds = %49
  %53 = load i8*, i8** %6, align 8
  %54 = load i8, i8* %53, align 1
  %55 = sext i8 %54 to i32
  %56 = icmp ne i32 %55, 0
  br label %57

57:                                               ; preds = %52, %49
  %58 = phi i1 [ false, %49 ], [ %56, %52 ]
  br i1 %58, label %59, label %102

59:                                               ; preds = %57
  br label %60

60:                                               ; preds = %65, %59
  %61 = load i8*, i8** %6, align 8
  %62 = load i8, i8* %61, align 1
  %63 = sext i8 %62 to i32
  %64 = icmp eq i32 %63, 32
  br i1 %64, label %65, label %68

65:                                               ; preds = %60
  %66 = load i8*, i8** %6, align 8
  %67 = getelementptr inbounds i8, i8* %66, i32 1
  store i8* %67, i8** %6, align 8
  br label %60

68:                                               ; preds = %60
  %69 = load i8*, i8** %6, align 8
  %70 = call i8* @strchr(i8* %69, i8 signext 32)
  store i8* %70, i8** %11, align 8
  %71 = load i8*, i8** %11, align 8
  %72 = icmp ne i8* %71, null
  br i1 %72, label %73, label %83

73:                                               ; preds = %68
  %74 = load i8*, i8** %11, align 8
  store i8 0, i8* %74, align 1
  %75 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %76 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %75, i32 0, i32 0
  %77 = load i32, i32* %76, align 4
  %78 = load i8*, i8** %6, align 8
  %79 = call i32 @r_num_math(i32 %77, i8* %78)
  store i32 %79, i32* %9, align 4
  %80 = load i8*, i8** %11, align 8
  store i8 32, i8* %80, align 1
  %81 = load i8*, i8** %11, align 8
  %82 = getelementptr inbounds i8, i8* %81, i64 1
  store i8* %82, i8** %6, align 8
  br label %94

83:                                               ; preds = %68
  %84 = load i8*, i8** %6, align 8
  %85 = load i8, i8* %84, align 1
  %86 = icmp ne i8 %85, 0
  br i1 %86, label %88, label %87

87:                                               ; preds = %83
  br label %102

88:                                               ; preds = %83
  %89 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %90 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %89, i32 0, i32 0
  %91 = load i32, i32* %90, align 4
  %92 = load i8*, i8** %6, align 8
  %93 = call i32 @r_num_math(i32 %91, i8* %92)
  store i32 %93, i32* %9, align 4
  store i8* null, i8** %6, align 8
  br label %94

94:                                               ; preds = %88, %73
  %95 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %96 = load i32, i32* %9, align 4
  %97 = call i32 @r_core_seek(%struct.TYPE_5__* %95, i32 %96, i32 1)
  %98 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %99 = load i8*, i8** %7, align 8
  %100 = call i32 @r_core_cmd(%struct.TYPE_5__* %98, i8* %99, i32 0)
  %101 = call i32 (...) @r_cons_flush()
  br label %49

102:                                              ; preds = %87, %57
  %103 = load i8*, i8** %8, align 8
  store i8* %103, i8** %6, align 8
  br label %14

104:                                              ; preds = %30, %14
  %105 = load i8*, i8** %7, align 8
  %106 = call i32 @free(i8* %105)
  ret void
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @r_num_math(i32, i8*) #1

declare dso_local i32 @r_core_seek(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @r_core_cmd(%struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @r_cons_flush(...) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
